--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
-	--primary: #1976d2;
+	--primary: #fcb600;
+	--secondary: #edeff3;
+	--success: #20d472;
 	--primary-light: #63a4ff;
 	--primary-dark: #004ba0;
-	--secondary: #f50057;
-	--secondary-light: #ff5983;
-	--secondary-dark: #bb002f;
 	--text-primary: #212121;
 	--text-secondary: #757575;
 	--text-disabled: #9e9e9e;
@@ -14,6 +16,7 @@
 	--text-icon: #ffffff;
 	--divider: #e0e0e0;
 	--background-default: #f5f5f5;
+	--header-height: 64px;
 }
 
 body {
@@ -35,7 +38,7 @@ body {
 	gap: 10px;
 }
 .active {
-	background-color: #1976d2;
+	background-color: var(--primary);
 	color: var(--text-icon);
 }
 .login-link {
@@ -48,9 +51,16 @@ body {
 	align-items: center;
 	gap: 10px;
 }
-
-button {
-	background-color: transparent;
-	border: none;
-	cursor: pointer;
+.order-link {
+	height: 100%;
+	border-radius: 5px;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-grow: 1;
+	border-radius: 24px;
+}
+.order-link-active {
+	background-color: white;
 }
